--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">AlarmApp</string>
     <string name="default_time">0:00</string>
-    <string name="add_new_signal">Add new signal</string>
+    <string name="add_new_alarm">Add new signal</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="mark">Mark</string>
